Updated url to cyb565 domain w/ https

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <div class="desktop-panel" id="desktopPanel">
         <iframe 
             id="guacFrame"
-            src="http://5.161.117.41:8080/guacamole/#/client/MQBjAHBvc3RncmVzcWw"
+            src="https://cyb565.com/guacamole/#/client/MQBjAHBvc3RncmVzcWw"
             allow="clipboard-read; clipboard-write"
             class="guac-iframe">
         </iframe>
