Changed src path

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <div class="desktop-panel" id="desktopPanel">
         <iframe 
             id="guacFrame"
-            src="https://cyb565.com/guacamole/#/client/MQBjAHBvc3RncmVzcWw"
+            src="https://cyb565.com/guacamole/"
             allow="clipboard-read; clipboard-write"
             class="guac-iframe">
         </iframe>
